fix overflow hidden

--- a/src/index.css
+++ b/src/index.css
@@ -191,9 +191,11 @@ body {
   flex-direction: column;
   justify-content: center;
   height: 100vh;
+
   /* padding: 24px;
   max-width: 800px; */
   margin: 0 auto;
+  overflow: hidden;
 }
 ol,
 ul {
